// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreatePost api/post/create create link post 1`] = `
Object {
  "__v": 0,
  "_id": "[SANITIZED]",
  "body": "awesome post #1!",
  "category": null,
  "channel": false,
  "commentCount": 0,
  "community": "relevant",
  "communityId": "c00000000000000000000001",
  "createdAt": "[SANITIZED]",
  "data": Object {
    "__v": 0,
    "_id": "[SANITIZED]",
    "balance": 0,
    "community": "relevant",
    "communityId": "c00000000000000000000001",
    "createdAt": "[SANITIZED]",
    "downVotes": 0,
    "eligibleForReward": false,
    "expectedPayout": 0,
    "hidden": false,
    "isInFeed": false,
    "latestComment": "[SANITIZED]",
    "pagerank": 0,
    "pagerankRaw": 0,
    "pagerankRawNeg": 0,
    "paidOut": false,
    "parentPost": Object {
      "__v": 0,
      "_id": "[SANITIZED]",
      "channel": false,
      "commentCount": 1,
      "createdAt": "[SANITIZED]",
      "data": Object {
        "__v": 0,
        "_id": "[SANITIZED]",
        "balance": 0,
        "community": "relevant",
        "communityId": "c00000000000000000000001",
        "createdAt": "[SANITIZED]",
        "downVotes": 0,
        "eligibleForReward": true,
        "expectedPayout": 0,
        "hidden": false,
        "isInFeed": true,
        "latestComment": "[SANITIZED]",
        "pagerank": 0,
        "pagerankRaw": 0,
        "pagerankRawNeg": 0,
        "paidOut": false,
        "payOutShare": 0,
        "payout": 0,
        "payoutTime": "[SANITIZED]",
        "post": "[SANITIZED]",
        "postDate": "[SANITIZED]",
        "rank": "[SANITIZED]",
        "relevance": 0,
        "relevanceNeg": 0,
        "repost": false,
        "shares": 0,
        "tags": Array [
          "tag11",
          "tag12",
        ],
        "totalShares": 0,
        "type": "link",
        "upVotes": 0,
        "updatedAt": "[SANITIZED]",
      },
      "description": "my amazing post",
      "downVotes": 0,
      "flagged": false,
      "flaggedBy": Array [],
      "hidden": false,
      "id": "[SANITIZED]",
      "image": "https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/cute-cat-captions-1563551865.jpg",
      "latestComment": "[SANITIZED]",
      "links": Array [],
      "mentions": Array [],
      "metaPost": Object {
        "__v": 0,
        "_id": "[SANITIZED]",
        "articleAuthor": Array [],
        "categories": Array [
          null,
        ],
        "createdAt": "[SANITIZED]",
        "description": "my amazing post",
        "domain": "example.com",
        "flagged": false,
        "flaggedBy": Array [],
        "image": "https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/cute-cat-captions-1563551865.jpg",
        "keywords": Array [],
        "links": Array [],
        "tags": Array [
          "tag11",
          "tag12",
        ],
        "title": "postTitle",
        "updatedAt": "[SANITIZED]",
        "url": "https://example.com/testPost1",
      },
      "pagerank": 0,
      "paidOut": false,
      "payoutTime": "[SANITIZED]",
      "postDate": "[SANITIZED]",
      "rank": 0,
      "relevance": 0,
      "seenInFeedNumber": 0,
      "tags": Array [
        "tag11",
        "tag12",
      ],
      "title": "postTitle",
      "twitter": false,
      "twitterScore": 0,
      "type": "link",
      "upVotes": 0,
      "updatedAt": "[SANITIZED]",
      "url": "https://example.com/testPost1",
      "version": "metaRework",
    },
    "payOutShare": 0,
    "payout": 0,
    "payoutTime": "[SANITIZED]",
    "post": "[SANITIZED]",
    "postDate": "[SANITIZED]",
    "rank": 0,
    "relevance": 0,
    "relevanceNeg": 0,
    "repost": false,
    "shares": 0,
    "tags": Array [
      "tag11",
      "tag12",
    ],
    "totalShares": 0,
    "type": "post",
    "upVotes": 0,
    "updatedAt": "[SANITIZED]",
  },
  "description": null,
  "downVotes": 0,
  "embeddedUser": Object {
    "_id": "[SANITIZED]",
    "handle": "alice",
    "image": "https://hips.hearstapps.com/elleuk.cdnds.net/15/37/2048x2730/2048x2730-e6-8278-458c32fb7c74-assets-elleuk-com-gallery-17063-taylor-swift-hairstyle-bob-getty-gallery-01-jpg.jpg",
    "name": "Alice",
  },
  "flagged": false,
  "flaggedBy": Array [],
  "hidden": false,
  "id": "[SANITIZED]",
  "image": "https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/cute-cat-captions-1563551865.jpg",
  "linkParent": Object {
    "__v": 0,
    "_id": "[SANITIZED]",
    "channel": false,
    "commentCount": 1,
    "createdAt": "[SANITIZED]",
    "data": Object {
      "__v": 0,
      "_id": "[SANITIZED]",
      "balance": 0,
      "community": "relevant",
      "communityId": "c00000000000000000000001",
      "createdAt": "[SANITIZED]",
      "downVotes": 0,
      "eligibleForReward": true,
      "expectedPayout": 0,
      "hidden": false,
      "isInFeed": true,
      "latestComment": "[SANITIZED]",
      "pagerank": 0,
      "pagerankRaw": 0,
      "pagerankRawNeg": 0,
      "paidOut": false,
      "payOutShare": 0,
      "payout": 0,
      "payoutTime": "[SANITIZED]",
      "post": "[SANITIZED]",
      "postDate": "[SANITIZED]",
      "rank": "[SANITIZED]",
      "relevance": 0,
      "relevanceNeg": 0,
      "repost": false,
      "shares": 0,
      "tags": Array [
        "tag11",
        "tag12",
      ],
      "totalShares": 0,
      "type": "link",
      "upVotes": 0,
      "updatedAt": "[SANITIZED]",
    },
    "description": "my amazing post",
    "downVotes": 0,
    "flagged": false,
    "flaggedBy": Array [],
    "hidden": false,
    "id": "[SANITIZED]",
    "image": "https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/cute-cat-captions-1563551865.jpg",
    "latestComment": "[SANITIZED]",
    "links": Array [],
    "mentions": Array [],
    "metaPost": Object {
      "__v": 0,
      "_id": "[SANITIZED]",
      "articleAuthor": Array [],
      "categories": Array [
        null,
      ],
      "createdAt": "[SANITIZED]",
      "description": "my amazing post",
      "domain": "example.com",
      "flagged": false,
      "flaggedBy": Array [],
      "image": "https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/cute-cat-captions-1563551865.jpg",
      "keywords": Array [],
      "links": Array [],
      "tags": Array [
        "tag11",
        "tag12",
      ],
      "title": "postTitle",
      "updatedAt": "[SANITIZED]",
      "url": "https://example.com/testPost1",
    },
    "pagerank": 0,
    "paidOut": false,
    "payoutTime": "[SANITIZED]",
    "postDate": "[SANITIZED]",
    "rank": 0,
    "relevance": 0,
    "seenInFeedNumber": 0,
    "tags": Array [
      "tag11",
      "tag12",
    ],
    "title": "postTitle",
    "twitter": false,
    "twitterScore": 0,
    "type": "link",
    "upVotes": 0,
    "updatedAt": "[SANITIZED]",
    "url": "https://example.com/testPost1",
    "version": "metaRework",
  },
  "links": Array [],
  "mentions": Array [
    "test",
    "user1",
  ],
  "metaPost": Object {
    "__v": 0,
    "_id": "[SANITIZED]",
    "articleAuthor": Array [],
    "categories": Array [
      null,
    ],
    "createdAt": "[SANITIZED]",
    "description": "my amazing post",
    "domain": "example.com",
    "flagged": false,
    "flaggedBy": Array [],
    "image": "https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/cute-cat-captions-1563551865.jpg",
    "keywords": Array [],
    "links": Array [],
    "tags": Array [
      "tag11",
      "tag12",
    ],
    "title": "postTitle",
    "updatedAt": "[SANITIZED]",
    "url": "https://example.com/testPost1",
  },
  "pagerank": 0,
  "paidOut": false,
  "parentPost": Object {
    "__v": 0,
    "_id": "[SANITIZED]",
    "channel": false,
    "commentCount": 1,
    "createdAt": "[SANITIZED]",
    "data": Object {
      "__v": 0,
      "_id": "[SANITIZED]",
      "balance": 0,
      "community": "relevant",
      "communityId": "c00000000000000000000001",
      "createdAt": "[SANITIZED]",
      "downVotes": 0,
      "eligibleForReward": true,
      "expectedPayout": 0,
      "hidden": false,
      "isInFeed": true,
      "latestComment": "[SANITIZED]",
      "pagerank": 0,
      "pagerankRaw": 0,
      "pagerankRawNeg": 0,
      "paidOut": false,
      "payOutShare": 0,
      "payout": 0,
      "payoutTime": "[SANITIZED]",
      "post": "[SANITIZED]",
      "postDate": "[SANITIZED]",
      "rank": "[SANITIZED]",
      "relevance": 0,
      "relevanceNeg": 0,
      "repost": false,
      "shares": 0,
      "tags": Array [
        "tag11",
        "tag12",
      ],
      "totalShares": 0,
      "type": "link",
      "upVotes": 0,
      "updatedAt": "[SANITIZED]",
    },
    "description": "my amazing post",
    "downVotes": 0,
    "flagged": false,
    "flaggedBy": Array [],
    "hidden": false,
    "id": "[SANITIZED]",
    "image": "https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/cute-cat-captions-1563551865.jpg",
    "latestComment": "[SANITIZED]",
    "links": Array [],
    "mentions": Array [],
    "metaPost": Object {
      "__v": 0,
      "_id": "[SANITIZED]",
      "articleAuthor": Array [],
      "categories": Array [
        null,
      ],
      "createdAt": "[SANITIZED]",
      "description": "my amazing post",
      "domain": "example.com",
      "flagged": false,
      "flaggedBy": Array [],
      "image": "https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/cute-cat-captions-1563551865.jpg",
      "keywords": Array [],
      "links": Array [],
      "tags": Array [
        "tag11",
        "tag12",
      ],
      "title": "postTitle",
      "updatedAt": "[SANITIZED]",
      "url": "https://example.com/testPost1",
    },
    "pagerank": 0,
    "paidOut": false,
    "payoutTime": "[SANITIZED]",
    "postDate": "[SANITIZED]",
    "rank": 0,
    "relevance": 0,
    "seenInFeedNumber": 0,
    "tags": Array [
      "tag11",
      "tag12",
    ],
    "title": "postTitle",
    "twitter": false,
    "twitterScore": 0,
    "type": "link",
    "upVotes": 0,
    "updatedAt": "[SANITIZED]",
    "url": "https://example.com/testPost1",
    "version": "metaRework",
  },
  "payoutTime": "[SANITIZED]",
  "postDate": "[SANITIZED]",
  "rank": 0,
  "relevance": 0,
  "seenInFeedNumber": 0,
  "tags": Array [
    "tag11",
    "tag12",
  ],
  "title": "postTitle",
  "twitter": false,
  "twitterScore": 0,
  "type": "post",
  "upVotes": 0,
  "updatedAt": "[SANITIZED]",
  "url": "https://example.com/testPost1",
  "user": "a00000000000000000000000",
  "version": "metaRework",
}
`;

exports[`CreatePost api/post/create create text post 1`] = `
Object {
  "__v": 0,
  "_id": "[SANITIZED]",
  "body": "awesome post #1!",
  "category": null,
  "channel": false,
  "commentCount": 0,
  "community": "relevant",
  "communityId": "c00000000000000000000001",
  "createdAt": "[SANITIZED]",
  "data": Object {
    "__v": 0,
    "_id": "[SANITIZED]",
    "balance": 0,
    "community": "relevant",
    "communityId": "c00000000000000000000001",
    "createdAt": "[SANITIZED]",
    "downVotes": 0,
    "eligibleForReward": true,
    "expectedPayout": 0,
    "hidden": false,
    "isInFeed": true,
    "latestComment": "[SANITIZED]",
    "pagerank": 0,
    "pagerankRaw": 0,
    "pagerankRawNeg": 0,
    "paidOut": false,
    "payOutShare": 0,
    "payout": 0,
    "payoutTime": "[SANITIZED]",
    "post": "[SANITIZED]",
    "postDate": "[SANITIZED]",
    "rank": 0,
    "relevance": 0,
    "relevanceNeg": 0,
    "repost": false,
    "shares": 0,
    "tags": Array [
      "tag11",
      "tag12",
    ],
    "totalShares": 0,
    "type": "post",
    "upVotes": 0,
    "updatedAt": "[SANITIZED]",
  },
  "description": null,
  "downVotes": 0,
  "embeddedUser": Object {
    "_id": "[SANITIZED]",
    "handle": "alice",
    "image": "https://hips.hearstapps.com/elleuk.cdnds.net/15/37/2048x2730/2048x2730-e6-8278-458c32fb7c74-assets-elleuk-com-gallery-17063-taylor-swift-hairstyle-bob-getty-gallery-01-jpg.jpg",
    "name": "Alice",
  },
  "flagged": false,
  "flaggedBy": Array [],
  "hidden": false,
  "id": "[SANITIZED]",
  "image": "https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/cute-cat-captions-1563551865.jpg",
  "links": Array [],
  "mentions": Array [
    "test",
    "user1",
  ],
  "pagerank": 0,
  "paidOut": false,
  "payoutTime": "[SANITIZED]",
  "postDate": "[SANITIZED]",
  "rank": 0,
  "relevance": 0,
  "seenInFeedNumber": 0,
  "tags": Array [
    "tag11",
    "tag12",
  ],
  "title": "postTitle",
  "twitter": false,
  "twitterScore": 0,
  "type": "post",
  "upVotes": 0,
  "updatedAt": "[SANITIZED]",
  "user": "a00000000000000000000000",
  "version": "metaRework",
}
`;
